# speakease-api

./: .gitignore  Dockerfile  README.md  cloudbuild-deploy.yaml  docker-compose.yml  pyproject.toml  requirements.txt  run_dev_server.ps1
app/: main.py
app/api/: se.py
app/config/: cloud_config.py
app/schemas/: se_user.py
app/services/: se_agent.py  se_prompt.py  se_psql_management.py  se_user_management.py
db_management/: se_add_textlog.py  se_read_textlog.py
tests/: test_agent_via_adk.py  test_config.py  test_main.py  test_main_se_agent.py  test_remote_agent.py  test_se_agent_api.py  test_se_user.py
